# proc-macro-type-name

./: Cargo.toml  README.md
src/: lib.rs
